--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/save_contact"
-            android:icon="@drawable/ic_save"
-            android:title="save"
-            app:showAsAction="ifRoom">
-    </item>
+            android:id="@+id/delete_all_contacts"
+            android:title="Delete All Contacts"
+            app:showAsAction="never"/>
 </menu>
