--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="8dp">
 
         <TextView
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_view_name"
-                android:text="Phone Number"/>
+                android:text="Phone Number" android:layout_marginTop="32dp"/>
 
     </RelativeLayout>
 
